--- a/professores/templates/professores/todos_professores.html
+++ b/professores/templates/professores/todos_professores.html
@@ -53,6 +53,7 @@
         </td>
       </tr>
     {% endfor %}
+    </tbody>
     <caption><small>usuários <u>sublinhados</u> são membros do comitê do Capstone.</small></caption>
   </table>
   </div>
