--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -51,28 +51,18 @@
                   {% endfor %}">{{aluno.user.get_full_name}}</a>
             </td>
             {% if aluno.curso2 %}
-              <td style="color:#{{ aluno.curso2.cor }};">
-                {{ aluno.curso2 }}
-              </td>
+              <td style="color:#{{ aluno.curso2.cor }};">{{ aluno.curso2 }}</td>
             {% else %}
-              <td><b>
-                <span lang="pt">CURSO NÃO DEFINIDO</span>
-                <span lang="en">COURSE NOT DEFINED</span>
-              </b></td>
+              <td><b>{% lng "CURSO NÃO DEFINIDO" "COURSE NOT DEFINED" %}</b></td>
             {% endif %}
-            <td>
-              <a href="mailto:{{aluno.user.email}}">{{aluno.user.email}}</a>
-            </td>
-            <td class="numero_virgula">
-              {{ aluno.cr|floatformat:4 }}
-            </td>
+            <td><a href="mailto:{{aluno.user.email}}">{{aluno.user.email}}</a></td>
+            <td class="numero_virgula">{{ aluno.cr|floatformat:4 }}</td>
           </tr>
         {% endfor %}
         </tbody>
         <caption style="text-align: left">
           <text class="text-success">&#x2B24;</text>
-          <span lang="pt">Estudante já selecionou propostas</span>
-          <span lang="en">Student already selected proposals</span>
+          {% lng "Estudante já selecionou propostas" "Student already selected proposals" %}
           ({{inscritos}}) [{% widthratio inscritos num_alunos 100 %}%]
           <span class="emails esconder">
             <a href="mailto:{% for email in inscritos_emails %}{{email}}{% if not forloop.last %};{% endif %}{% endfor %}?subject=Capstone%20Insper" target="_blank">
@@ -82,8 +72,7 @@
           <br>
 
           <text class="text-warning">&#x2B24;</text> 
-          <span lang="pt">Estudante realizou seleção provisória</span>
-          <span lang="en">Student performed temporary selection</span>
+          {% lng "Estudante realizou seleção provisória" "Student performed temporary selection" %}
           ({{tmpinscritos}}) [{% widthratio tmpinscritos num_alunos 100 %}%]
           <span class="emails esconder">
             <a href="mailto:{% for email in tmpinscritos_emails %}{{email}}{% if not forloop.last %};{% endif %}{% endfor %}?subject=Capstone%20Insper" target="_blank">
@@ -93,8 +82,7 @@
           <br>
           
           <text class="text-danger">&#x2B24;</text>
-          <span lang="pt">Estudante ainda precisa selecionar propostas</span>
-          <span lang="en">Student still needs to select proposals</span>
+          {% lng "Estudante ainda precisa selecionar propostas" "Student still needs to select proposals" %}
           ({{ninscritos}}) [{% widthratio ninscritos num_alunos 100 %}%]
           <span class="emails esconder">
             <a href="mailto:{% for email in ninscritos_emails %}{{email}}{% if not forloop.last %};{% endif %}{% endfor %}?subject=Capstone%20Insper" target="_blank">
