--- a/documentos/templates/documentos/contratos_assinados.html
+++ b/documentos/templates/documentos/contratos_assinados.html
@@ -14,53 +14,18 @@
 
 {% block content %}
 
-  {% include "edicoes.html" %}<br>
+  {% include "edicoes.html" %}
   
   <div class="atualizar">
     {% include "tabelas_top_ml.html" with tabela="Contratos" cabecalhos=cabecalhos %}
       {% for projeto in projetos %} 
         <tr class="item">
-
-          {% include "organizacoes/includes/td_organizacao.html" with organizacao=projeto.organizacao %}
-
-          <!-- Projeto "font-size: 0.9em;" -->
-          {% include "projetos/includes/td_projeto.html" with projeto=projeto tit_proposta=True %}
-          
-          <!-- Conexões -->
-          <td style="min-width:18em;">
-            <small>
-            <ul style="padding-left: 20px;margin-bottom: 0px;">
-              {% for conexao in projeto.conexao_set.all %}
-                {% if conexao.parceiro %}
-                  <li>
-                    <a class="imprimir" href="{% url 'parceiro_detail' conexao.parceiro.id %}">{{ conexao.parceiro.user.get_full_name }}</a>
-                    {% for papel in conexao.get_papeis %}[{{papel.0}}] {% endfor %}
-                  </li>
-                {% endif %}
-              {% endfor %}
-            </ul>
-            </small>
-          </td>
-
-          <!-- Estudantes -->
-          <td style="min-width:18em;">
-            <small>
-            <ul class="grupo" style="padding-left: 20px;margin-bottom: 0px;">
-              {% for alocacao in projeto.alocacao_set.all %}
-                <li>
-                  <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno}}</a>
-                  <span class="curso">[{{ alocacao.aluno.curso2 }}]</span>
-                </li>
-              {% endfor %}
-            </ul>
-            </small>
-          </td>
-
-          <!-- Orientador -->
-          {% include "academica/includes/td_orientador.html" with orientador=projeto.orientador coorientadores=projeto.coorientador_set.all %}
-
-          <!-- Período -->
-          <td style="text-align:center">{{projeto.ano}}.{{projeto.semestre}}</td>
+          <td>{% include "organizacoes/includes/bloco_organizacao.html" with organizacao=projeto.organizacao %}</td>
+          <td style="font-size: 0.9em;">{% include "projetos/includes/bloco_projeto.html" with projeto=projeto tit_proposta=True %}</td>
+          <td style="min-width: 18em;">{% include "organizacoes/includes/bloco_conexoes.html" with conexoes=projeto.conexao_set.all pequeno=True %}</td>          
+          <td style="min-width: 18em;">{% include "estudantes/includes/bloco_estudantes.html" with grupo=projeto.alocacao_set.all pequeno=True %}</td>          
+          <td>{% include "academica/includes/bloco_orientador.html" with orientador=projeto.orientador coorientadores=projeto.coorientador_set.all %}</td>
+          <td style="text-align:center">{{projeto.get_edicao}}</td>
 
           <!-- Contrato(s) -->
           <td style="text-align:center; vertical-align: middle; position:relative;">
@@ -120,7 +85,7 @@
                 {% endif %}
                 {% if documento.link %}
                   <a class="btn btn-light btn-outline-info btn-sm" style="width: 7em; padding:0px 4px 0px 4px;"
-                      href="{{documento.link}}" target="_blank" rel="noopener noreferrer">Contrato</a>
+                      href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{% lng "Contrato" "Contract" %}</a>
                   {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
                     <sup>(Inglês)</sup>
                   {% endif %}
@@ -129,8 +94,7 @@
 
             {% empty %}
               <span class="btn btn-danger btn-sm">
-                <span lang="pt">Contrato<br>Pendente</span>
-                <span lang="en" style="display:none">Contract<br>Pending</span>
+                {% lng "Contrato<br>Pendente" "Contract<br>Pending" %}
               </span>
             {% endfor %}
           </td>
