--- a/professores/templates/professores/bancas_tabela_alocacao.html
+++ b/professores/templates/professores/bancas_tabela_alocacao.html
@@ -23,8 +23,7 @@
           <div class="input-group-prepend">
             <label class="to_label input-group-text" for="avaliador">
               <span class="to_hide">
-                <span lang="pt">Avaliador</span>
-                <span lang="en">Evaluator</span>
+                {% lng "Avaliador" "Evaluator" %}
               </span>
             </label>
           </div>
@@ -40,28 +39,24 @@
 
   <div class="atualizar">
     {% include "tabelas_top_ml.html" with tabela="Bancas" cabecalhos=cabecalhos %}
-          {% for membro, bancas in membros.items %}
-            {% if membro.tipo_de_usuario == 2 or membro.tipo_de_usuario == 4 %}
-              <tr class="item" data-user="Insper">
-                <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">{{membro.get_full_name}}</a>
-            {% elif membro.tipo_de_usuario == 3 %}
-              <tr class="item" data-user="Externo">
-                <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'parceiro_detail' membro.parceiro.id %}">{{membro.get_full_name}}</a>
-            {% else %}
-              <tr class="item"><td>Erro ao identificar usuário
-            {% endif %}</td>
-              <td><a href="mailto:{{membro.email}}">{{membro.email}}</a></td>
-              <td style="text-align: center;"> 
-                {{bancas|length}}
-              </td>
-              <td style="text-align: left;">
-                <small>{% for banca in bancas %}&bull; Banca {{banca.get_tipo}}: [{{banca.projeto.organizacao}}] {{banca.projeto.get_titulo}} ({{banca.startDate}})<br>{% endfor %}</small>
-              </td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
+      {% for membro, bancas in membros.items %}
+        {% if membro.tipo_de_usuario == 2 or membro.tipo_de_usuario == 4 %}
+          <tr class="item" data-user="Insper">
+            <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">{{membro.get_full_name}}</a>
+        {% elif membro.tipo_de_usuario == 3 %}
+          <tr class="item" data-user="Externo">
+            <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'parceiro_detail' membro.parceiro.id %}">{{membro.get_full_name}}</a>
+        {% else %}
+          <tr class="item"><td>Erro ao identificar usuário
+        {% endif %}</td>
+          <td><a href="mailto:{{membro.email}}">{{membro.email}}</a></td>
+          <td style="text-align: center;"> {{bancas|length}}</td>
+          <td style="text-align: left;">
+            <small>{% for banca in bancas %}&bull; Banca {{banca.get_tipo}}: [{{banca.projeto.organizacao}}] {{banca.projeto.get_titulo}} ({{banca.startDate}})<br>{% endfor %}</small>
+          </td>
+        </tr>
+      {% endfor %}
+    {% include "tabelas_bottom.html" %}
   </div>
 
   {% include "edicoes_ajax.html" with tabela="Bancas" %}
