--- a/professores/templates/professores/mentorias_tabela.html
+++ b/professores/templates/professores/mentorias_tabela.html
@@ -18,38 +18,31 @@
   {% include "edicoes.html" %}
 
   <div class="atualizar">
-
     {% include "tabelas_top_ml.html" with tabela="Mentorias" cabecalhos=cabecalhos %}
-          {% for membro, mentorias in mentores.items %}
-            {% if membro.tipo_de_usuario == 2 or membro.tipo_de_usuario == 4 %}
-              <tr class="item" data-user="Insper">
-                <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">{{membro.get_full_name}}</a>
-            {% elif membro.tipo_de_usuario == 3 %}
-              <tr class="item" data-user="Externo">
-                <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'parceiro_detail' membro.parceiro.id %}">{{membro.get_full_name}}</a>
-            {% else %}
-              <tr class="item"><td>
-                <span lang="pt">Erro ao identificar usuário</span>
-                <span lang="en">Error identifying user</span>
-            {% endif %}</td>
-              <td><a href="mailto:{{membro.email}}">{{membro.email}}</a></td>
-              <td style="text-align: center;"> 
-                {{mentorias|length}}
-              </td>
-              <td style="text-align: left;">
-                <small>{% for mentoria in mentorias %}&bull; Mentoria: [{{mentoria.projeto.organizacao}}] {{mentoria.projeto.get_titulo}} ({{mentoria.startDate}})<br>{% endfor %}</small>
-              </td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
+      {% for membro, mentorias in mentores.items %}
+        {% if membro.tipo_de_usuario == 2 or membro.tipo_de_usuario == 4 %}
+          <tr class="item" data-user="Insper">
+            <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">{{membro.get_full_name}}</a>
+        {% elif membro.tipo_de_usuario == 3 %}
+          <tr class="item" data-user="Externo">
+            <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'parceiro_detail' membro.parceiro.id %}">{{membro.get_full_name}}</a>
+        {% else %}
+          <tr class="item"><td>
+            {% lng "Erro ao identificar usuário" "Error identifying user" %}
+        {% endif %}</td>
+          <td><a href="mailto:{{membro.email}}">{{membro.email}}</a></td>
+          <td style="text-align: center;"> 
+            {{mentorias|length}}
+          </td>
+          <td style="text-align: left;">
+            <small>{% for mentoria in mentorias %}&bull; 
+              {% lng "Mentoria" "Mentoring" %}: 
+              [{{mentoria.projeto.organizacao}}] {{mentoria.projeto.get_titulo}} ({{mentoria.startDate}})<br>{% endfor %}</small>
+          </td>
+        </tr>
+      {% endfor %}
+    {% include "tabelas_bottom.html" %}
   </div>
-
-  {% comment %} <script>
-    function carrega_pagina() {};
-    window.onload = carrega_pagina
-  </script> {% endcomment %}
 
   {% include "edicoes_ajax.html" with tabela="Mentorias" %}
 
