--- a/projetos/templates/projetos/bancas_tabela_agenda.html
+++ b/projetos/templates/projetos/bancas_tabela_agenda.html
@@ -45,96 +45,95 @@
 
   <div class="atualizar">
     {% include "tabelas_top_ml.html" with tabela="Bancas" cabecalhos=cabecalhos %}
-    {% for banca in bancas %}
-      <tr class="item" data-user="{{banca.get_sigla}}">
-        <td>{{banca.composicao.exame}}</td>
-        {% comment %} <td>{{banca.startDate|date:"d/m/Y"}}</td> {% endcomment %}
-        <td><span class="texto-longo">De: {{banca.startDate}}<br>A: {{banca.endDate}}</span>
-            <span class="texto-curto">De: {{banca.startDate|date:"d/m/y H:i"}}<br>A: {{banca.endDate|date:"d/m/y H:i"}}</span></td>
-        <td data-order="{{banca.projeto.get_titulo}}" style="width: 48%;">
-          {% comment %} Probation {% endcomment %}
-          {% if banca.alocacao %}
-            Projeto: 
-            {% if banca.alocacao.projeto.organizacao %}
-              [<a href="{% url 'organizacao_completo' banca.alocacao.projeto.organizacao.id %}">{{ banca.alocacao.projeto.organizacao.nome }}</a>]
-            {% else %}
-              [<i>Organização não definida</i>]
-            {% endif %}
+      {% for banca in bancas %}
+        <tr class="item" data-user="{{banca.get_sigla}}">
+          <td>{{banca.composicao.exame}}</td>
+          {% comment %} <td>{{banca.startDate|date:"d/m/Y"}}</td> {% endcomment %}
+          <td><span class="texto-longo">De: {{banca.startDate}}<br>A: {{banca.endDate}}</span>
+              <span class="texto-curto">De: {{banca.startDate|date:"d/m/y H:i"}}<br>A: {{banca.endDate|date:"d/m/y H:i"}}</span></td>
+          <td data-order="{{banca.projeto.get_titulo}}" style="width: 48%;">
+            {% comment %} Probation {% endcomment %}
             {% if banca.alocacao %}
-              <a href="{% url 'projeto_completo' banca.alocacao.projeto.id %}">
-                {{banca.alocacao.projeto.get_titulo}}{% include "tipo_projeto.html" with projeto=banca.alocacao.projeto %}
-              </a><br>
-            {% endif %}
-            Orientador: 
-            {% if banca.alocacao.projeto.orientador %}
-              <a href="{% url 'professor_detail' banca.alocacao.projeto.orientador.id %}">{{ banca.alocacao.projeto.orientador }}</a>
-              <a href="mailto:{{banca.alocacao.projeto.orientador.user.email}}"> &lt;{{banca.alocacao.projeto.orientador.user.email}}&gt;</a>
-            {% else %}
-              <i>Orientador não definido</i>
-            {% endif %}
-            
-          <br>Estudante:
-          <ul>
-            <li>
-              <a href="{% url 'estudante_detail' banca.alocacao.aluno.id %}">{{ banca.alocacao.aluno.user.get_full_name }}</a>
-              <a href="mailto:{{banca.alocacao.aluno.user.email}}"> &lt;{{banca.alocacao.aluno.user.email}}&gt;</a>
-            </li>
-          </ul>
-
-          {% else %}
-            Projeto: 
-            {% if banca.projeto.organizacao %}
-              [<a href="{% url 'organizacao_completo' banca.projeto.organizacao.id %}">{{ banca.projeto.organizacao.nome }}</a>]
-            {% else %}
-              [<i>Organização não definida</i>]
-            {% endif %}
-            {% if banca.projeto %}
-              <a href="{% url 'projeto_completo' banca.projeto.id %}">
-                {{banca.projeto.get_titulo}}{% include "tipo_projeto.html" %}
-              </a><br>
-            {% else %}
-              <i>Projeto não definido | Probation</i>
-            {% endif %}
-            Orientador: 
-            {% if banca.projeto.orientador %}
-              <a href="{% url 'professor_detail' banca.projeto.orientador.id %}">{{ banca.projeto.orientador }}</a>
-              <a href="mailto:{{banca.projeto.orientador.user.email}}"> &lt;{{banca.projeto.orientador.user.email}}&gt;</a>
-            {% else %}
-              <i>Orientador não definido</i>
-            {% endif %}
-
-            <br>Grupo:
+              Projeto: 
+              {% if banca.alocacao.projeto.organizacao %}
+                [<a href="{% url 'organizacao_completo' banca.alocacao.projeto.organizacao.id %}">{{ banca.alocacao.projeto.organizacao.nome }}</a>]
+              {% else %}
+                [<i>Organização não definida</i>]
+              {% endif %}
+              {% if banca.alocacao %}
+                <a href="{% url 'projeto_completo' banca.alocacao.projeto.id %}">
+                  {{banca.alocacao.projeto.get_titulo}}{% include "tipo_projeto.html" with projeto=banca.alocacao.projeto %}
+                </a><br>
+              {% endif %}
+              Orientador: 
+              {% if banca.alocacao.projeto.orientador %}
+                <a href="{% url 'professor_detail' banca.alocacao.projeto.orientador.id %}">{{ banca.alocacao.projeto.orientador }}</a>
+                <a href="mailto:{{banca.alocacao.projeto.orientador.user.email}}"> &lt;{{banca.alocacao.projeto.orientador.user.email}}&gt;</a>
+              {% else %}
+                <i>Orientador não definido</i>
+              {% endif %}
+              
+            <br>Estudante:
             <ul>
-            {% for estudante in banca.projeto.alocacao_set.all %}
               <li>
-              <a href="{% url 'estudante_detail' estudante.aluno.id %}">{{ estudante.aluno.user.get_full_name }}</a>
-              <a href="mailto:{{estudante.aluno.user.email}}"> &lt;{{estudante.aluno.user.email}}&gt;</a>
+                <a href="{% url 'estudante_detail' banca.alocacao.aluno.id %}">{{ banca.alocacao.aluno.user.get_full_name }}</a>
+                <a href="mailto:{{banca.alocacao.aluno.user.email}}"> &lt;{{banca.alocacao.aluno.user.email}}&gt;</a>
               </li>
-            {% endfor %}
             </ul>
-          {% endif %}
-        </td>
-        {% comment %} <td class="text-center">
-          {{projeto.ano}}&middot;{{projeto.semestre}}
-        </td> {% endcomment %}
-        <td>
-          <ul>
-            {% if banca.composicao.exame.sigla == "BI" or banca.composicao.exame.sigla == "BF" %}
-              <li>
-                <a href="{% url 'professor_detail' banca.projeto.orientador.id %}">{{ banca.projeto.orientador }} [orientador]</a>
+
+            {% else %}
+              Projeto: 
+              {% if banca.projeto.organizacao %}
+                [<a href="{% url 'organizacao_completo' banca.projeto.organizacao.id %}">{{ banca.projeto.organizacao.nome }}</a>]
+              {% else %}
+                [<i>Organização não definida</i>]
+              {% endif %}
+              {% if banca.projeto %}
+                <a href="{% url 'projeto_completo' banca.projeto.id %}">
+                  {{banca.projeto.get_titulo}}{% include "tipo_projeto.html" %}
+                </a><br>
+              {% else %}
+                <i>Projeto não definido | Probation</i>
+              {% endif %}
+              Orientador: 
+              {% if banca.projeto.orientador %}
+                <a href="{% url 'professor_detail' banca.projeto.orientador.id %}">{{ banca.projeto.orientador }}</a>
                 <a href="mailto:{{banca.projeto.orientador.user.email}}"> &lt;{{banca.projeto.orientador.user.email}}&gt;</a>
-              </li>
+              {% else %}
+                <i>Orientador não definido</i>
+              {% endif %}
+
+              <br>Grupo:
+              <ul>
+              {% for estudante in banca.projeto.alocacao_set.all %}
+                <li>
+                <a href="{% url 'estudante_detail' estudante.aluno.id %}">{{ estudante.aluno.user.get_full_name }}</a>
+                <a href="mailto:{{estudante.aluno.user.email}}"> &lt;{{estudante.aluno.user.email}}&gt;</a>
+                </li>
+              {% endfor %}
+              </ul>
             {% endif %}
-            {% for membro in banca.membros %}
-              <li><a href="{% url 'user_detail' membro.id %}">{{membro.get_full_name}}</a></li>
-              <a href="mailto:{{membro.email}}"> &lt;{{membro.email}}&gt;</a>
-            {% endfor %}
-          </ul>
-        </td>
-      </tr>
-    {% endfor %}      
-    </table>
-    </div>
+          </td>
+          {% comment %} <td class="text-center">
+            {{projeto.ano}}&middot;{{projeto.semestre}}
+          </td> {% endcomment %}
+          <td>
+            <ul>
+              {% if banca.composicao.exame.sigla == "BI" or banca.composicao.exame.sigla == "BF" %}
+                <li>
+                  <a href="{% url 'professor_detail' banca.projeto.orientador.id %}">{{ banca.projeto.orientador }} [orientador]</a>
+                  <a href="mailto:{{banca.projeto.orientador.user.email}}"> &lt;{{banca.projeto.orientador.user.email}}&gt;</a>
+                </li>
+              {% endif %}
+              {% for membro in banca.membros %}
+                <li><a href="{% url 'user_detail' membro.id %}">{{membro.get_full_name}}</a></li>
+                <a href="mailto:{{membro.email}}"> &lt;{{membro.email}}&gt;</a>
+              {% endfor %}
+            </ul>
+          </td>
+        </tr>
+      {% endfor %}
+    {% include "tabelas_bottom.html" %}
   </div>
   
   {% include "edicoes_ajax.html" with tabela="Bancas" %}
