--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -185,6 +185,8 @@ tbody tr:nth-child(odd) {background-color: #f9f9f9;} */
   #canvas-holder {width:100%;}
   h3 {font-size: 1.09em;}
   h4 {font-size: 1.05em;}
+  label {font-size: 15px;}
+  input {font-size: 15px;}
 } 
 
 @media (max-width: 800px) {
