--- a/templates/base.html
+++ b/templates/base.html
@@ -107,8 +107,16 @@
     </div>
 
   </div>
-  <div id="tudo" class="container-fluid">
+  
+  {% comment %} Para mensagens de erro ou avisos {% endcomment %}
+  {% if mensagem_aviso %}
+    <div id="mensagem_aviso">{{ mensagem_aviso|safe|linebreaks }}</div>
+  {% elif mensagem_alerta_fade %}
+    <div id="mensagem_aviso">{{ mensagem_alerta_fade|safe|linebreaks }}</div>
+    <script>setTimeout(function() {$("#mensagem_aviso").fadeOut("fast");}, 5000);</script>
+  {% endif %}
 
+  <div id="tudo" class="container-fluid">    
     {% if titulo %}
       <span class="titulo">{% lng titulo.pt titulo.en %}</span>
     {% endif %}
