--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -137,11 +137,12 @@
       <ol>{% for aula in aulas %}
           <li>
             {% if aula.documento.documento %}<a href="{{request.scheme}}://{{request.get_host}}{{aula.documento.documento.url}}" target="_blank" rel="noopener noreferrer">{% endif %}
-              {{aula.startDate}} - {{aula.atividade}}
+              <span class="texto-longo">{% lng_dl aula.startDate %}</span>
+              <span class="texto-curto">{% lng_d aula.startDate %}</span>
+              - {{aula.atividade}}
             {% if aula.documento.documento %}</a>{% endif %}
           </li>  
-      {% endfor %}
-      </ol>
+      {% endfor %}</ol>
     </div>
   {% endif %}
 
