--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -225,10 +225,10 @@
       </div>
 
       {% if liberadas_propostas %}
-        {% lng "Sistema liberado para estudantes verem propostas de projetos até" "System released for students to see project proposals until" %}:
+        {% lng "Sistema liberado para estudantes verem propostas de projetos até" "System open for students to view project proposals until " %}:
         {{limite_propostas}}. &#x1F7E2;
       {% else %}
-        {% lng "Sistema ainda não está liberado para estudantes verem propostas de projetos. &#x1F534;" "System not yet released for students to see project proposals. &#x1F534;" %}
+        {% lng "Sistema ainda não está liberado para estudantes verem propostas de projetos. &#x1F534;" "System is not yet open for students to view project proposals. &#x1F534;" %}
       {% endif %}<br>
       
       <p>&nbsp;</p>
