--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -106,7 +106,7 @@
     <br>
 
     {% if num_alunos %}
-      <b>{% lng "Total de Estudantes Aplicando" "Total of Applying Students" %}:</b>
+      <b>{% lng "Total de Estudantes Aplicando" "Total of Students Enrolled" %}:</b>
       {{ num_alunos }}<br>
     {% endif %}
 
