--- a/documentos/templates/documentos/tabela_imagens.html
+++ b/documentos/templates/documentos/tabela_imagens.html
@@ -17,12 +17,11 @@
 
   {% if user.admin %}
     <span class="esconder">
-      <a 
-      href="#"
-      class="open-documento" style="cursor:pointer;"
+      <a href="#" class="open-documento" style="cursor:pointer;"
       data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
       ><i class="fas fa-plus"></i>
-        {% lng "Adicionar novo documento" "Add new document" %}    </a>
+        {% lng "Adicionar novo documento" "Add new document" %}
+      </a>
     </span>
     {% include "documento-modal.html" %}
   {% endif %}
@@ -42,7 +41,10 @@
           {% for obj in group.list %}
             <tr class="item">
               {% ifchanged %}
-                <td style="vertical-align:middle" rowspan="{{ group.list|length }}">{{obj.data|date:"DATE_FORMAT"}}</td>
+                <td style="vertical-align:middle" rowspan="{{ group.list|length }}">
+                  <span class="texto-longo">{% lng_dl obj.data %}</span>
+                  <span class="texto-curto">{% lng_d obj.data %}</span>
+                </td>
               {% endifchanged %}
               <td style="vertical-align:middle">{% if obj.anotacao %}{{obj.anotacao}}{% endif %}</td>
               <td style="text-align:center; padding: 2px; border-top-style: dotted;{% if not forloop.last %}border-bottom-style: dotted;{% endif %}">
