--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -137,7 +137,7 @@
             {% endif %}>
             <td style="text-align: center; font-size: 12px;"></td>
             
-            <td>{% include "organizacoes/includes/bloco_organizacao.html" with organizacao=organizacao %}<td>
+            <td>{% include "organizacoes/includes/bloco_organizacao.html" with organizacao=organizacao %}</td>
 
             <td style="text-align:center">
               <small style="white-space: nowrap;">{% for curso in cursos %}<span class="cursor_pointer" id="{{organizacao.id}}{{curso.sigla_curta}}"
@@ -165,69 +165,51 @@
             {% comment %} Anotação {% endcomment %}
             <td>
               {% if not contato %}
-                <div style="float:left;width: 92%;">
-                  <span id="contato_autor{{organizacao.id}}">
-                    ---:
-                  </span>
-                  <a
-                    id='organizacao{{organizacao.id}}'
-                    data-organizacao='{{organizacao.id}}'
-                    class="edit-annotation imprimir"
-                    >---------</a
-                  >
+                <div style="float:left; width: 92%;">
+                  <span id="contato_autor{{organizacao.id}}">---:</span>
+                  <a id='organizacao{{organizacao.id}}'
+                     data-organizacao='{{organizacao.id}}'
+                     class="edit-annotation imprimir"
+                    >---------</a>
                 </div>
                 <div class="esconder" style="float:right;">
                   {% if organizacao %}
-                    <a
-                      style="font-size: 0.5em; vertical-align: super;"
-                      data-organizacao='{{organizacao.id}}'
-                      class="create-annotation"
-                      href="{% url 'anotacao' organizacao.id %}"
-                      data-url="{% url 'anotacao' organizacao.id %}"
-                      >&#10133;</a
-                    >
+                    <a style="font-size: 0.5em; vertical-align: super;"
+                       data-organizacao='{{organizacao.id}}'
+                       class="create-annotation"
+                       href="{% url 'anotacao' organizacao.id %}"
+                       data-url="{% url 'anotacao' organizacao.id %}"
+                      >&#10133;</a>
                   {% else %}
-                    <small>ERRO</small>
+                    <small>{% lng "ERRO" "ERROR" %}</small>
                   {% endif %}
                 </div>
               {% else %}
-                {% comment %} {{contato.texto}} {% endcomment %}
-                  <div style="float:left;width: 92%;">
-                    <span id="contato_autor{{organizacao.id}}">
-                      {{contato.autor.first_name}}:
-                    </span>
-                    <a
-                      id='organizacao{{organizacao.id}}'
-                      data-organizacao='{{organizacao.id}}'
+                <div style="float:left; width: 92%; line-height: 1.1;">
+                  <span id="contato_autor{{organizacao.id}}">{{contato.autor.first_name}}:</span>
+                  <a id="organizacao{{organizacao.id}}"
+                      data-organizacao="{{organizacao.id}}"
                       class="edit-annotation imprimir"
                       href="{% url 'anotacao' organizacao.id %}"
                       data-url="{% url 'anotacao' organizacao.id %}"
                       data-anotacao="{{contato.id}}"
-                      >{{contato.texto}}</a
-                    >
-                  </div>
-                  <div class="esconder" style="float:right;">
-                    <a
-                      style="font-size: 0.5em; vertical-align: super;"
-                      data-organizacao='{{organizacao.id}}'
+                    >{{contato.texto}}</a
+                  >
+                </div>
+                <div class="esconder" style="float:right;">
+                  <a style="font-size: 0.5em; vertical-align: super;"
+                      data-organizacao="{{organizacao.id}}"
                       class="create-annotation"
                       href="{% url 'anotacao' organizacao.id %}"
                       data-url="{% url 'anotacao' organizacao.id %}"
-                      >&#10133;</a
-                    >
-                  </div>
+                    >&#10133;</a
+                  >
+                </div>
               {% endif %}
             </td>
 
-            {% comment %} Propostas Disponíveis {% endcomment %}
-            <td class="text-center">
-              {{disponiveis}}
-            </td>
-
-            {% comment %} Propostas Enviadas {% endcomment %}
-            <td class="text-center">
-              {{submetidas}}
-            </td>
+            <td class="text-center">{{disponiveis}}</td> {% comment %} Propostas Disponíveis {% endcomment %}
+            <td class="text-center">{{submetidas}}</td> {% comment %} Propostas Enviadas {% endcomment %}
 
           </tr>
           {% if contato != "---------" %}
@@ -289,22 +271,23 @@
       </div>
 
       <div style="margin-top: 10px;">
-      <strong>
-        {% lng "Total de Propostas Disponíveis" "Total of Proposals Available" %}
-        (>={{ano}}.{{semestre}}):</strong> {{ total_disponiveis }}
-      <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas, incluindo as (ainda) não disponibilizadas para os estudantes.">
-        ({{ total_submetidas }})
-        <br>
-      </a>
+        <b>{% lng "Total de Propostas Disponíveis" "Total of Proposals Available" %}(>={{ano}}.{{semestre}}):</b>
+        {{ total_disponiveis }}
+        <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas, incluindo as (ainda) não disponibilizadas para os estudantes.">
+          ({{ total_submetidas }})
+        </a>
       <div>
 
       <div class="flex-container">
         <div class="flex-item">
           <div style="display: inline-block; border: 1px solid black; margin-top: 16px; padding: 10px; max-width: 100%">
-            <b>{% lng "Organizações contactadas recentemente" "Recently contacted organizations" %} ({{total_organizacoes}}):</b><br>
+            <div class="mb-2">
+              <b>{% lng "Organizações contactadas recentemente" "Recently contacted organizations" %} ({{total_organizacoes}}):</b>
+            </div>
             {% for tipo in tipo_retorno %}
               <div class="d-flex align-items-start">
-                <span data-type="{{tipo.id}}" data-color="#{{tipo.cor}}" data-hide="false" class="show-hide mr-2" style="background-color:#{{tipo.cor}};">&nbsp;&nbsp;&nbsp;</span>
+                <span data-type="{{tipo.id}}" data-color="#{{tipo.cor}}" data-hide="false" class="show-hide mr-2" 
+                style="line-height: 1.2; background-color: #{{tipo.cor}};">&nbsp;&nbsp;&nbsp;</span>
                 <span class="text-truncate">{{tipo.nome}}</span>
                 <span id="retorno{{tipo.id}}" class="calc_aux ml-2"></span>
               </div>
